test/cli/test-mutate/global-anchor/kyverno-test.yaml
name: validate-service-loadbalancer
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  patchedResource: patchedResource.yaml
  policy: add-safe-to-evict
  resources:
  - pod-with-emptydir-hostpath
  result: pass
  rule: annotate-empty-dir
- kind: Pod
  patchedResource: patchedResourceWithVolume.yaml
  policy: add-safe-to-evict
  resources:
  - pod-with-emptydir-hostpath-1
  result: pass
  rule: annotate-empty-dir
- kind: Pod
  policy: add-safe-to-evict
  resources:
  - pod-without-emptydir-hostpath
  - pod-without-emptydir-hostpath-1
  result: skip
  rule: annotate-empty-dir
