test/cli/test-mutate/global-anchor/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-without-emptydir-hostpath
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-emptydir-hostpath
spec:
  containers:
  - name: nginx
    image: nginx
  volumes:
  - name: demo-volume
    emptyDir: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-emptydir-hostpath-1
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - mountPath: /cache
      name: cache-volume
  volumes:
  - name: cache-volume
    emptyDir:
      sizeLimit: 500Mi
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-without-emptydir-hostpath-1
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: config-vol
          mountPath: /etc/config
  volumes:
    - name: config-vol
      configMap:
        name: log-config
        items:
          - key: log_level
            path: log_level
